# Design

./: README.md  draftadc.c  draftmicroros.c
Jetson Nano (2019)/: README.md  orbslam2-realsense.service
Jetson Nano (2019)/ros2_ws/src/dsy_motor_msgs/: CMakeLists.txt  package.xml
Jetson Nano (2019)/ros2_ws/src/dsy_motor_msgs/msg/: MotorOdometryArray.msg  MotorOutputOdometryArray.msg  MotorRpmArray.msg  MotorRpmCommandArray.msg
Jetson Nano (2019)/ros2_ws/src/hexapod_hardware_cpp/: CMakeLists.txt  package.xml
Jetson Nano (2019)/ros2_ws/src/hexapod_hardware_cpp/config/: hardware_stack.yaml  linkage_measured.yaml  linkage_template.yaml  merged_visualization.rviz  remote_visualization.rviz
Jetson Nano (2019)/ros2_ws/src/hexapod_hardware_cpp/config/lut/: README.md
Jetson Nano (2019)/ros2_ws/src/hexapod_hardware_cpp/include/hexapod_hardware_cpp/: klann_geometry.hpp  lcd1602_i2c.hpp  path_utils.hpp  serial_port.hpp  wt901_protocol.hpp
Jetson Nano (2019)/ros2_ws/src/hexapod_hardware_cpp/launch/: hardware_stack.launch.py  imu_udp_export.launch.py  merged_visualization.launch.py  remote_visualization.launch.py
Jetson Nano (2019)/ros2_ws/src/hexapod_hardware_cpp/src/: body_state_estimator_node.cpp  imu_udp_export_node.cpp  klann_geometry.cpp  klann_lut_generator.cpp  klann_visualizer_node.cpp  lcd1602_i2c.cpp  lcd1602_status_node.cpp  motor_state_aggregator_node.cpp  path_utils.cpp  phase_command_router_node.cpp  serial_port.cpp  weighted_odom_fusion_node.cpp  wt901_config_tool.cpp  wt901_imu_node.cpp  wt901_protocol.cpp
Jetson Nano (2019)/ros2_ws/src/hexapod_nav2_bringup/: CMakeLists.txt  README.md  package.xml
Jetson Nano (2019)/ros2_ws/src/hexapod_nav2_bringup/config/: hexapod_nav2_params.yaml
Jetson Nano (2019)/ros2_ws/src/hexapod_nav2_bringup/launch/: hexapod_nav2.launch.py
Jetson Nano (2019)/ros2_ws/src/hexapod_nav2_bringup/scripts/: check_nav2_ready.sh
Jetson Nano (2019)/ros2_ws/src/hexapod_nav_cpp/: CMakeLists.txt  README.md  package.xml  plugin.xml
Jetson Nano (2019)/ros2_ws/src/hexapod_nav_cpp/config/: controller_stack.yaml  nav2_controller_example.yaml
Jetson Nano (2019)/ros2_ws/src/hexapod_nav_cpp/include/hexapod_nav_cpp/: klann_controller_core.hpp  nav2_klann_controller_plugin.hpp  phase_gait_generator.hpp
Jetson Nano (2019)/ros2_ws/src/hexapod_nav_cpp/launch/: controller_stack.launch.py
Jetson Nano (2019)/ros2_ws/src/hexapod_nav_cpp/src/: klann_controller_core.cpp  klann_mppi_controller_node.cpp  nav2_klann_controller_plugin.cpp  phase_gait_generator.cpp
Jetson Nano (2019)/ros2_ws/src/hexapod_operator_interface/: package.xml  setup.cfg  setup.py
Jetson Nano (2019)/ros2_ws/src/hexapod_operator_interface/config/: operator_interface.yaml
Jetson Nano (2019)/ros2_ws/src/hexapod_operator_interface/hexapod_operator_interface/: operator_interface_node.py  scan_gate_node.py
Jetson Nano (2019)/ros2_ws/src/hexapod_operator_interface/launch/: operator_interface.launch.py
Jetson Nano (2019)/ros2_ws/src/hexapod_orbslam_udp_bridge/: CMakeLists.txt  README.md  package.xml
Jetson Nano (2019)/ros2_ws/src/hexapod_orbslam_udp_bridge/config/: slam_toolbox_orbslam_scan.yaml  udp_bridge_defaults.yaml
Jetson Nano (2019)/ros2_ws/src/hexapod_orbslam_udp_bridge/launch/: orbslam_slam_toolbox.launch.py  udp_bridge.launch.py
Jetson Nano (2019)/ros2_ws/src/hexapod_orbslam_udp_bridge/src/: udp_bridge_node.cpp
Jetson Nano (2019)/ros2_ws/src/hexapod_tripod_gait/: CMakeLists.txt  README.md  package.xml
Jetson Nano (2019)/ros2_ws/src/hexapod_tripod_gait/config/: tripod_gait.yaml
Jetson Nano (2019)/ros2_ws/src/hexapod_tripod_gait/include/hexapod_tripod_gait/: tripod_gait_node.hpp
Jetson Nano (2019)/ros2_ws/src/hexapod_tripod_gait/launch/: tripod_gait.launch.py
Jetson Nano (2019)/ros2_ws/src/hexapod_tripod_gait/src/: main.cpp  tripod_gait_node.cpp
Jetson Nano (2019)/scripts/: hexapod-host-control.py  hexapod-ros2-full-launch.sh  install_hexapod_autostart.sh  install_hexapod_host_control.sh  install_hexapod_nav2_speed_defaults.sh
Jetson Nano (2019)/systemd/: hexapod-host-control.default  hexapod-host-control.service  hexapod-ros2-full-launch.default  hexapod-ros2-full-launch.service  orbslam2-realsense.service
Jetson_docker_setup/: Dockerfile.jazzy  README.md  docker-compose.yml
esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  serial_transport_colcon_meta_snippet.json
esp32/main/: CMakeLists.txt  Kconfig.projbuild  RAW_ENCODER_ODOM_NOTE.txt  dsy_rs485_servo.c  dsy_rs485_servo.h  esp32_serial_transport.c  esp32_serial_transport.h  hexapod_hw_config.h  main.c  motor_power_manager.c  motor_power_manager.h  motor_velocity_bridge.c  motor_velocity_bridge.h  sdkconfig.converted.defaults  (+1 more)
hexa_ws/src/hexapod_control_gui/: README.md  package.xml  setup.cfg  setup.py
hexa_ws/src/hexapod_control_gui/config/: gui_defaults.yaml
hexa_ws/src/hexapod_control_gui/hexapod_control_gui/: main.py
hexa_ws/src/hexapod_control_gui/launch/: hexapod_control_gui.launch.py
hexa_ws/src/hexapod_mujoco_nav/: README.md  package.xml  setup.cfg  setup.py
hexa_ws/src/hexapod_mujoco_nav/config/: controllers.yaml  ekf.yaml  gait_phase_controller.yaml  nav2_params.yaml
hexa_ws/src/hexapod_mujoco_nav/hexapod_mujoco_nav/: cmd_vel_repeater.py  gait_phase_controller.py  klann_cmdvel_bridge.py  mujoco_bridge_node.py
hexa_ws/src/hexapod_mujoco_nav/launch/: gait_phase_controller.launch.py  sim_nav.launch.py  teleop_testing.launch.py
hexa_ws/src/hexapod_mujoco_nav/mjcf/: config.json  robot.xml  scene.xml
hexa_ws/src/hexapod_mujoco_nav/mjcf/assets/: base_link.part  base_link.stl  base_link__1.part  base_link__1.stl  fusioncomponent.part  fusioncomponent.stl  left_down_link.part  left_down_link.stl  left_triangle_link.part  left_triangle_link.stl  middle_triangle_link.part  middle_triangle_link.stl  right_down_link.part  right_down_link.stl  rightmidbase.part  round_joint.part  round_joint.stl  top_link.part  top_link.stl
hexa_ws/src/hexapod_mujoco_nav/urdf/: hexapod_control.urdf.xacro
klann-esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
(+22 files in other folders)
