<?xml version="1.0"?>
<package format="3">
  <name>hexapod_control_gui</name>
  <version>0.1.0</version>
  <description>ROS 2 control PC GUI for hexapod: teleop, mode/rider/e-stop, battery/odom/imu, camera view.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>klann_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>

  <!-- Optional (recommended) -->
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
