<?xml version="1.0"?>
<package format="3">
  <name>hexapod_hardware_cpp</name>
  <version>0.1.0</version>
  <description>C++ host-side utilities for IMU, aggregation, phase routing, estimation, and LCD status.</description>
  <maintainer email="user@example.com">OpenAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>dsy_motor_msgs</depend>
  <depend>hexapod_control_interfaces</depend>
  <depend>ament_index_cpp</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
