<?xml version="1.0"?>
<package format="3">
  <name>hexapod_operator_interface</name>
  <version>0.1.0</version>
  <description>HTTP operator interface and command arbiter for hexapod Nav2, teleop, estop, map, and battery status.</description>
  <maintainer email="user@example.com">hexapod</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>dsy_motor_msgs</depend>
  <depend>hexapod_control_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
