<?xml version="1.0"?>
<package format="3">
  <name>hexapod_tripod_gait</name>
  <version>0.4.0</version>
  <description>Simple C++ /cmd_vel to six-motor tripod-gait RPM bridge for the hexapod.</description>
  <maintainer email="user@example.com">hexapod</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dsy_motor_msgs</depend>
  <depend>hexapod_control_interfaces</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
